--- a/app/src/main/res/layout/fragment_fifth.xml
+++ b/app/src/main/res/layout/fragment_fifth.xml
@@ -22,8 +22,7 @@
             app:layout_constraintBottom_toTopOf="@+id/textView_wheel_width3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="TextContrastCheck" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView_question6"
@@ -50,8 +49,7 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/button_offset_decrease3"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/button_increase_width3"
@@ -64,8 +62,7 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/button_increase_offset3"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="DuplicateSpeakableTextCheck" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/button_offset_decrease3"
